--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="header-adress-list list">
+        <ul class="header-adress__list list">
           <li class="header-adress__item">
             <a class="header-adress__link link" href="mailto:info@devstudio.com">
               <svg
