reworked with sass

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- Custom styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- WebStudio header -->
